--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -279,3 +279,4 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
