--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-	<a class="skip" href="#content">Skip to content</a>
-
 	<header class="site-header">
 		<div class="container header-inner">
 			<div class="brand">
-				<div class="avatar" aria-hidden="true">KK</div>
 				<div>
 					<div class="name">Kumar Kalyan</div>
 					<div class="tagline">Aspiring Data Analyst • India</div>
@@ -37,7 +34,6 @@
 		<section class="hero">
 			<div class="container hero-inner">
 				<div>
-					<h1>Turning raw data into clear business decisions.</h1>
 					<p class="lead">
 						I work with <strong>SQL</strong>, <strong>Excel</strong>, <strong>Power BI</strong>, and <strong>Python</strong> to clean data, uncover insights, and build interactive dashboards.
 					</p>
@@ -48,9 +44,8 @@
 
 					<ul class="meta" role="list">
 						<li><span class="meta-label">Location</span><span>India</span></li>
-						<li><span class="meta-label">Email</span><a href="mailto:yourmail@email.com">yourmail@email.com</a></li>
-						<li><span class="meta-label">LinkedIn</span><a href="https://linkedin.com/in/yourname" target="_blank" rel="noreferrer">linkedin.com/in/yourname</a></li>
-						<li><span class="meta-label">GitHub</span><a href="https://github.com/yourname" target="_blank" rel="noreferrer">github.com/yourname</a></li>
+						<li><span class="meta-label">Email</span><a href="mailto:kumarkalyantech@gmail.com">kumarkalyantech@gmail.com</a></li>
+						<li><span class="meta-label">GitHub</span><a href="https://github.com/KalyanTech" target="_blank" rel="noreferrer">github.com/yourname</a></li>
 					</ul>
 				</div>
 
@@ -279,4 +274,5 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
